[gd_scene load_steps=2 format=3 uid="uid://d2sl6aqkcnmqv"]

[ext_resource type="Script" uid="uid://2u0o8v41wf7c" path="res://Main/UI/ui.gd" id="1_t1ota"]

[node name="mmenu" type="CanvasLayer"]
script = ExtResource("1_t1ota")

[node name="MainMenu" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainMenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="Host" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host
"

[node name="Join" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="Address" type="LineEdit" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Address"

[node name="Singleplayer" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Singleplayer"

[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/Join" to="." method="_on_join_pressed"]
